[project]
authors = [
    {name = "Matthew Loper", email = "matt.loper@gmail.com"},
    {name = "Mark Kittisopikul", email = "kittisopikulm@janelia.hhmi.org"}
]
dependencies = ["numpy>=1.8.1", "scipy>=0.13.0", "six>=1.11.0"]
description = "Autodifferentiation tool for Python."
name = "chumpy"
license = {file = "LICENSE.txt"}
requires-python = ">= 3.8"
version = "0.71"
classifiers=[
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Mathematics',

    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: MIT License',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',

    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux'
    ]

[project.urls]
Homepage='https://github.com/mattloper/chumpy'
Repository='https://github.com/mattloper/chumpy'
Issues='https://github.com/mattloper/chumpy/issues'

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
chumpy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = "1.*"
scipy = ">=1.14.1,<2"
six = ">=1.17.0,<2"
